<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino2</name>
  <version>0.0.1</version>
  <description>ROS2 node of Festo Robotino2</description>
  <maintainer email="oleg.brylyov@mail.ru">BrOleg5</maintainer>
  <license>Apache License 2.0</license>
  <author>BrOleg5</author>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotino_interfaces</depend>
  <depend>boost</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
